<resources>
    <string name="app_name">RyanGithubUserApp</string>
    <string name="location">location</string>
    <string name="company">company</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="repository">Repository</string>
    <string name="number">000</string>
    <string name="name">Name</string>
    <string name="favorite">Favorite</string>
    <string name="change_notification_settings">Notification</string>
    <string name="change_language_settings">Language</string>
    <string name="delete_favorite">Favorite Deleted</string>
    <string name="add_favorite">Favorite Added</string>
    <string name="empty_favorite">Favorite Empty</string>
    <string name="username">Username</string>
    <string name="setting">Setting</string>
    <string name="daily_message">Find new favorite</string>
    <string name="daily_on">Daily Reminder Is ON</string>
    <string name="daily_off">Daily Reminder Is OFF</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="reminder_setting">Reminder</string>
    <string name="daily_reminder">Daily Reminder</string>
</resources>